--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PaginationApp</title>
-  <base href="/">
+  <title>PokeDex</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <base href="/">
+  <link rel="icon" type="image/x-icon" href="./assets/pokeballicon.png">
 </head>
 <body>
   <app-root></app-root>
